# sage-databot

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  prefect.yaml  pyproject.toml
docs/: DATABASES.md
src/: cli.py  variables.py
src/categories/: categories.tsv  categories_edges.tsv  categories_flow.py  google_taxonomy_flow.py
src/components/: components.tsv  components_flow.py
src/graphql/: schema.gql
src/graphql/api_client/: __init__.py  add_item.py  add_org.py  add_source.py  add_variant.py  client.py  enums.py  get_org.py  get_root_category.py  get_source.py  get_variant.py  input_types.py  root_category.py  update_item.py  update_org.py  update_source.py  update_variant.py
src/graphql/queries/: categories.graphql  items.graphql  orgs.graphql  sources.graphql  variants.graphql
src/materials/: materials.tsv  materials_edges.tsv  materials_flow.py
src/models/: models.py
src/openfoodfacts/: columns.yml  off.py  off_import_flow.py  off_variants_flow.py  variants_connect_flow.py
src/openfoodfacts/prompts/: item.jinja  item_example.txt
src/openstreetmap/: README.md  db_tags.py  db_tags_flow.py  generators.py  osm.py  osm_tags.py  tags_flow.py
src/processes/: extract_flow.py
src/scripts/: gen_ids.py  graphql.sh  install_deps.sh  test_db.py
src/search/: db_export_flow.py  index_flow.py
src/sources/: unstructured_flow.py  upload_source.py
src/tags/: component_tags.py  place_tags.py  tags_flow.py  validate_schema.py  variant_tags.py
src/tags/schemas/: component_packaging.json  place_opening_hours.json  variant_distribution.json  variant_distribution_test.json  variant_manufacturing.json  variant_origins.json  variant_origins_test.json
src/tags/ui_schemas/: place_opening_hours.json  variant_manufacturing.json  variant_origins.json
src/utils/: __init__.py  api.py  extract.py  lang.py
src/utils/db/: crdb.py  meili.py
src/whosonfirst/: README.md  wof.marimo.py  wof.py
(+3 files in other folders)
